# pigpigcontest

./: .gitignore  11x_pretrain_best_0.1.txt  11x_pretrain_best_color_0.1.txt  11x_pretrain_last_0.1.txt  11x_pretrain_last_color_0.1.txt  README.md  eval.sh  eval_grayscale.sh  evaluate.py  evaluation.py  example.py  finetune.sh  main.py  pyproject.toml  quick_start.py  readme.md  requirements.txt  test.py  test_yolov10x.py  train.sh  train_domain_adaptation.py  train_gray.txt
data_splits/: data.yaml  data_finetune_color.yaml  data_pretrain_color.yaml  data_pretrain_grayscale.yaml  val.txt
src/: __init__.py  data_loader.py  ensemble_predictions.py  eval_color.sh  evaluation.py  inference.py  model.py  train.py  train_color.sh
src/data_splits/: data_finetune_grayscale.yaml  data_full_grayscale.yaml  hyp.yaml  train.txt
src/train/: img.cache
src/train/labels/: 00000911.txt  00000915.txt
yolo_dataset_full_grayscale/labels/: train.cache
yolo_dataset_pretrain_color/labels/: train.cache  val.cache
yolo_dataset_pretrain_color/labels/train/: 00000912.txt
yolo_dataset_pretrain_grayscale/labels/: train.cache  val.cache
