[project]
name = "taica-cvpdl-2025-hw-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "huggingface-hub>=0.35.3",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.6",
    "opencv-python>=4.12.0.88",
    "pandas>=2.3.3",
    "safetensors>=0.6.2",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "torch>=2.8.0",
    "torchaudio>=2.8.0",
    "torchvision>=0.23.0",
    "tqdm>=4.67.1",
    "ultralytics>=8.3.205",
]

[tool.uv.sources]
ultralytics = { git = "https://github.com/THU-MIG/yolov10.git" }
